--- a/en/index.html
+++ b/en/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
-    <title>https://demo.gethugothemes.com/airspace/examplesite/</title>
-    <link rel="canonical" href="https://demo.gethugothemes.com/airspace/examplesite/">
+    <title>https://yang0625.github.io/test.github.io/</title>
+    <link rel="canonical" href="https://yang0625.github.io/test.github.io/">
     <meta name="robots" content="noindex">
     <meta charset="utf-8">
-    <meta http-equiv="refresh" content="0; url=https://demo.gethugothemes.com/airspace/examplesite/">
+    <meta http-equiv="refresh" content="0; url=https://yang0625.github.io/test.github.io/">
   </head>
 </html>
